@startuml
'https://plantuml.com/class-diagram

class Alumno {
    - String nombre
    - String Apellido
    - Integer legajo
    - Materia[] materiasAprobadas
    + boolean cumpleCorrelativasDe(Materia materia)
}

class Inscripcion {
    - Materia[] materiasPropuestas
    - Alumno alumno
    + boolean aprobada()
}

class Materia {
    - Materia[] correlativas
    + Materia[] obtenerCorrelativas()
}


Materia *--> Inscripcion
Alumno *--> Inscripcion
Materia o--> Alumno
Materia o--> Materia

@enduml